# handeye-sim

./: .gitignore  PLAN.md  create_params.py  debug_joints.py  diagnose_init.py  gen_ctrl.py  gen_mg4_params.py  gen_mg_params.py  gen_params.py  launch_test.py  run_demo.sh  srdf_publisher.py  test_closed_form_init.py  test_ctrl.py  test_ctrl2.py  test_final.py  test_final2.py  test_final3.py  test_final4.py  test_geometry_standalone.py  test_plane_init.py  test_robust.py  test_twostage.py  validate_yaml.py
ros2_ws/src/handeye_sim_bridge/: package.xml  setup.py
ros2_ws/src/handeye_sim_bridge/config/: calibration_plate.sdf  controllers.yaml  fake_controllers.yaml  fanuc.srdf  fov_calib.json  gz_controllers.yaml  joint_limits.yaml  kinematics.yaml  move_group_params.yaml  moveit_controllers.yaml  ompl_planning.yaml
ros2_ws/src/handeye_sim_bridge/handeye_sim_bridge/: auto_calib_node.py  auto_servo_collect.py  bridge_combined_runner.py  bridge_publisher.py  calib_visualization.py  debug_fov.py  debug_fov2.py  fanuc_kinematic.py  fanuc_transforms.py  fanuc_types.py  get_joints.py  manual_control_node.py  move_to_plate.py  move_via_joints.py  read_profile.py  replay_calib_poses.py  scene_publisher_node.py  search_pose.py  srdf_publisher_node.py  tf_checker.py
ros2_ws/src/handeye_sim_bridge/launch/: handeye_sim.launch.py  handeye_sim_manual.launch.py  handeye_sim_moveit.launch.py  sim_setup.launch.py
ros2_ws/src/handeye_sim_bridge/rviz/: handeye_sim.rviz  handeye_sim_moveit.rviz  test_moveit.rviz
ros2_ws/src/handeye_sim_bridge/scripts/: bridge_combined_runner  (+1 more)
(+30 files in other folders)
