<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypesetns="G"?>
<package format="3">
  <name>handeye_sim_bridge</name>
  <version>0.1.0</version>
  <description>ROS2 桥接 — 手眼标定仿真可视化 (纯数值 FOV 几何 + RViz)</description>
  <maintainer email="z@z.com">Zhang HaHa</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_msgs</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
